--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -89,7 +89,7 @@ knitr::include_graphics("figures/naomi-aghq/conditional-simulation-diff-k-fixed.
     Previously, it has been difficult for researchers not involved in development of `R-INLA` to engage in methodological work about the INLA method.
 
     Theoretical research could be conducted to complement the work described above, extending the findings of @bilodeau2022stochastic.
-    This work is benefited by the complete specification (Appendix \@ref(algorithms)) of the INLA-like algorithm used in this thesis.
+    This work is benefited by the complete specification (Appendix \@ref(algorithm)) of the INLA-like algorithm used in this thesis.
 
 ## Broader reflections
 
