--- a/references.bib
+++ b/references.bib
@@ -3002,3 +3002,28 @@ URL = {https://doi.org/10.1214/12-SS102}
   publisher={Public Library of Science San Francisco, CA USA}
 }
 
+@article{smirnov1948table,
+  title={Table for estimating the goodness of fit of empirical distributions},
+  author={Smirnov, N},
+  journal={Annals of Mathematical Statistics},
+  volume={19},
+  number={2},
+  pages={279--281},
+  year={1948},
+  publisher={JSTOR}
+}
+
+@article{gretton2006kernel,
+  title={A kernel method for the two-sample-problem},
+  author={Gretton, Arthur and Borgwardt, Karsten and Rasch, Malte and Sch{\"o}lkopf, Bernhard and Smola, Alex},
+  journal={{Advances in Neural Information Processing Systems}},
+  volume={19},
+  year={2006}
+}
+
+@article{karatzoglou2019package,
+  title={Package ‘kernlab’},
+  author={Karatzoglou, Alexandros and Smola, Alex and Hornik, Kurt and Karatzoglou, Maintainer Alexandros},
+  journal={CRAN R Project},
+  year={2019}
+}
