--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -3,7 +3,7 @@ Their guidance has been crucial in shaping this thesis, and my development as a 
 <!-- Thanks to my examiners Adam Sykulski and Chris Paciorek. -->
 Thanks to the HIV Inference Group at Imperial for exposing me to impact driven research, helping me to learn to present my work, and tolerating a statistician.
 I am grateful to have been a part of the Modern Statistics and Statistical Machine Learning Centre for Doctoral Training at Imperial and Oxford, and the Machine Learning and Global Health Network.
-Thanks to Antoine, Chris, Enrico, Phil, Yanni, Theo, Tim, Liza, and Theo for conversations, some of which were about research.
+Thanks to Antoine, Chris, Enrico, Phil, Yanni, Tim, Liza, and Theo for conversations, some of which were about research.
 This work was made possible by funding provided by the EPSRC and Bill & Melinda Gates Foundation.
 There are many worse ways to spend billions of dollars than fighting poverty and disease.
 
