--- a/references.bib
+++ b/references.bib
@@ -3027,3 +3027,35 @@ URL = {https://doi.org/10.1214/12-SS102}
   journal={CRAN R Project},
   year={2019}
 }
+
+@article{noor2022country,
+  title={Country ownership in global health},
+  author={Noor, Abdisalan Mohamed},
+  journal={PLOS Global Public Health},
+  volume={2},
+  number={2},
+  pages={e0000113},
+  year={2022},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{berild2022importance,
+  title={Importance sampling with the integrated nested Laplace approximation},
+  author={Berild, Martin Outzen and Martino, Sara and G{\'o}mez-Rubio, Virgilio and Rue, H{\aa}vard},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={31},
+  number={4},
+  pages={1225--1237},
+  year={2022},
+  publisher={Taylor \& Francis}
+}
+
+@article{gomez2018markov,
+  title={Markov chain Monte Carlo with the integrated nested Laplace approximation},
+  author={G{\'o}mez-Rubio, Virgilio and Rue, H{\aa}vard},
+  journal={Statistics and Computing},
+  volume={28},
+  pages={1033--1051},
+  year={2018},
+  publisher={Springer}
+}
