--- a/07-conclusions.Rmd
+++ b/07-conclusions.Rmd
@@ -26,9 +26,10 @@ This chapter concludes the thesis by discussing its most important contributions
 Effective response to the HIV epidemic depends on strategic information provided by models of data.
 The contributions of this thesis are both in generating this information, and in understanding and advancing statistical methods.
 
-Chapter \@ref(beyond-borders) comprehensively compared adjacency- and kernel-based models for spatial structure, using tools for model assessment such as proper scoring rules and posterior predictive checks.
-The experiments conducted provide useful data to guide use of spatial random effect models by applied practitioners, as well as to base methodological developments on.
-The most important findings were as follows (remains to write).
+Chapter \@ref(beyond-borders) found that spatially structured random effects should be used in small-area models for HIV.
+Kernel models performed better for data simulated from an adjacency-based spatial process than adjacency-based models did for data simulated from a kernel model.
+That said, adjacency-based models performed better under cross-validation of real HIV survey data.
+Model comparison was conducted using strictly proper scoring rules, with checks for calibration.
 
 (ref:global-update-conclusion) Panel A shows the front page of @unaids2023global. Panel B shows the page containing text and a figure based on the work done in Chapter \@ref(multi-agyw). In this figure, 30 countries are included.
 
