--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -1,4 +1,4 @@
-I would first like to express my gratitude to Seth Flaxman and Jeff Eaton for their mentorship.
+I would first like to express my gratitude to Seth Flaxman and Jeff Imai-Eaton for their mentorship.
 Their guidance has been crucial in shaping this thesis, and my development as a scientist.
 <!-- Thanks to my examiners Adam Sykulski and Chris Paciorek. -->
 Thanks to the HIV Inference Group at Imperial for exposing me to impact driven research, helping me to learn to present my work, and tolerating a statistician.
